--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               height="26"
               aria-hidden="true"
             >
-              <use xlink:href="/images/sprite.svg#icon-logo"></use>
+              <use xlink:href="images/sprite.svg#icon-logo"></use>
             </svg>
           </a>
           <div class="description_conteiner">
@@ -166,7 +166,7 @@
                 display: block;
               "
             >
-              <source src="/video/process.mp4" type="video/mp4" />
+              <source src="video/process.mp4" type="video/mp4" />
             </video>
           </div>
         </div>
@@ -261,7 +261,7 @@
                         muted
                         loop
                         playsinline
-                        poster="/images/video-poster.jpg"
+                        poster="images/video-poster.jpg"
                         style="
                           width: 100%;
                           height: 100%;
@@ -269,7 +269,7 @@
                           display: block;
                         "
                       >
-                        <source src="/video/pizza.mp4" type="video/mp4" />
+                        <source src="video/pizza.mp4" type="video/mp4" />
                         <p>
                           Ваш браузер не поддерживает видео.
                           <a href="/video/pizza.mp4">Скачайте видео</a>
@@ -292,7 +292,7 @@
                     height="24"
                     style="margin-right: 10px; vertical-align: middle"
                   >
-                    <use xlink:href="/images/sprite.svg#icon-calculator"></use>
+                    <use xlink:href="images/sprite.svg#icon-calculator"></use>
                   </svg>
                   Бесплатный расчёт стоимости
                 </h4>
@@ -386,7 +386,7 @@
                 <div class="form-actions">
                   <button type="submit" class="submit-btn">
                     <svg width="34" height="34" style="margin-right: 8px">
-                      <use xlink:href="/images/sprite.svg#icon-telegram"></use>
+                      <use xlink:href="images/sprite.svg#icon-telegram"></use>
                     </svg>
                     Заказать расчёт через Telegram
                   </button>
@@ -506,7 +506,7 @@
             height="94"
             aria-hidden="true"
           >
-            <use xlink:href="/images/sprite.svg#icon-lamp"></use>
+            <use xlink:href="images/sprite.svg#icon-lamp"></use>
           </svg>
           <h2 class="visually-hidden">Описание магазина</h2>
           <div class="description__texts">
@@ -685,7 +685,7 @@
               height="33"
               aria-hidden="true"
             >
-              <use xlink:href="/images/sprite.svg#icon-logo-black"></use>
+              <use xlink:href="images/sprite.svg#icon-logo-black"></use>
             </svg>
           </a>
           <div class="footer__menu">
@@ -735,7 +735,7 @@
                   height="15"
                   aria-hidden="true"
                 >
-                  <use xlink:href="/images/sprite.svg#icon-visa"></use>
+                  <use xlink:href="images/sprite.svg#icon-visa"></use>
                 </svg>
               </li>
               <li class="footer__card">
@@ -745,7 +745,7 @@
                   height="22"
                   aria-hidden="true"
                 >
-                  <use xlink:href="/images/sprite.svg#icon-mc"></use>
+                  <use xlink:href="images/sprite.svg#icon-mc"></use>
                 </svg>
               </li>
               <li class="footer__card">
@@ -755,7 +755,7 @@
                   height="19"
                   aria-hidden="true"
                 >
-                  <use xlink:href="/images/sprite.svg#icon-mir"></use>
+                  <use xlink:href="images/sprite.svg#icon-mir"></use>
                 </svg>
               </li>
             </ul>
@@ -780,7 +780,7 @@
               height="18"
               aria-hidden="true"
             >
-              <use xlink:href="/images/sprite.svg#icon-affarts"></use>
+              <use xlink:href="images/sprite.svg#icon-affarts"></use>
             </svg>
           </a>
         </div>
