--- a/index.html
+++ b/index.html
@@ -534,172 +534,242 @@
       <!-- Описание компании -->
       <section class="description description-about">
         <div class="container">
-          <svg
-            class="description__lamp"
-            width="94"
-            height="94"
-            aria-hidden="true"
-          >
-            <use xlink:href="images/sprite.svg#icon-lamp"></use>
-          </svg>
-          <h2 class="visually-hidden">Описание магазина</h2>
+          <h2 class="visually-hidden">О нашей компании</h2>
           <div class="description__texts">
             <p>
-              Накладные светильники можно установить на потолок, пол или стены в
-              соответствии с дизайнерской концепцией. Сфера использования данных
-              осветительных приборов широка. Их успешно применяют для освещения
-              любых помещений: офисов, торговых и бизнес-центров, магазинов,
-              интерьеров сегмента HoReCa и т.д.
+              Мы — команда веб-разработчиков, создающая современные цифровые
+              решения для бизнеса. Специализируемся на разработке сайтов,
+              интернет-магазинов и веб-приложений, которые работают на
+              результат.
             </p>
+
             <p>
-              На нашем сайте в каталоге представлен широкий выбор накладных
-              светильников. В нем вы сможете найти световые приборы различной
-              формы, цвета, размера, стиля и пр. Устанавливая нужные
-              характеристики, нетрудно выбрать подходящую модель. Однако чтобы
-              купить накладные светильники под конкретную задачу, удобнее
-              связаться с менеджерам. Специалисты сделают профессиональный
-              проект освещения, подберут оборудование и при необходимости
-              организуют доставку. Мы реализуем варианты светильников накладных
-              для декоративного, направленного или заливающего освещения.
-              Предлагаются модели с различными источниками света, но
-              максимальное количество вариантов – среди светодиодных
-              светильников.
+              Наш подход сочетает креативный дизайн, качественную техническую
+              реализацию и понимание бизнес-задач. Мы не просто пишем код — мы
+              создаем инструменты для привлечения клиентов и увеличения продаж.
+            </p>
+
+            <p>
+              В каталоге представлены ключевые услуги: от создания лендингов и
+              корпоративных сайтов до сложных интернет-магазинов. Каждый проект
+              разрабатывается индивидуально с учетом специфики вашего бизнеса.
+            </p>
+
+            <p>
+              Работаем на результат: обеспечиваем техническую поддержку,
+              аналитику эффективности и помогаем развивать ваш цифровой продукт
+              после запуска.
             </p>
           </div>
         </div>
       </section>
 
-      <!-- FAQ -->
-      <section class="faq">
+      <section class="faq-section">
         <div class="container">
-          <div class="faq__wrapper">
-            <h2 class="faq__title">Ответы на частые вопросы от покупателей</h2>
-            <div class="faq__accordion accordion">
-              <div class="accordion__element">
-                <button class="accordion__btn" type="button">
-                  <span class="accordion__btn-text">Вы работаете с НДС?</span>
-                  <span class="accordion__btn-icon"></span>
+          <div class="faq-container">
+            <h2 class="faq-heading">Часто задаваемые вопросы</h2>
+            <div class="faq-accordion">
+              <!-- Вопрос 1 -->
+              <div class="faq-item">
+                <button
+                  class="faq-question"
+                  type="button"
+                  aria-expanded="false"
+                >
+                  <span class="faq-question-text"
+                    >Сколько времени занимает разработка сайта?</span
+                  >
+                  <span class="faq-icon"></span>
                 </button>
-                <div class="accordion__content">
-                  <div class="accordion__inner">
-                    <div class="accordion__text">
-                      <p>
-                        Вы можете отказаться от покупки. Товар должен быть
-                        надлежащего качества. Убедитесь, что сохранён товарный
-                        вид, потребительские свойства, а также имеется документ,
-                        подтверждающий покупку товара, на товаре отсутствуют
-                        следы сборки, ухудшающие его товарный вид.
-                      </p>
-                      <p>
-                        Обращаем Ваше внимание, что расходы на доставку товара в
-                        случае возврата или обмена товара надлежащего качества
-                        несет Покупатель.
-                      </p>
-                    </div>
+                <div class="faq-answer" aria-hidden="true">
+                  <div class="faq-answer-content">
+                    <p>Сроки разработки зависят от сложности проекта:</p>
+                    <ul>
+                      <li>Лендинг (одностраничный сайт) — 2-3 недели</li>
+                      <li>Интернет-магазин — 4-8 недель</li>
+                      <li>Корпоративный сайт — 3-6 недель</li>
+                      <li>Мобильное приложение — 6-12 недель</li>
+                    </ul>
+                    <p>
+                      Точные сроки определяются после анализа требований и
+                      составления технического задания.
+                    </p>
                   </div>
                 </div>
               </div>
-              <div class="accordion__element">
-                <button class="accordion__btn" type="button">
-                  <span class="accordion__btn-text"
-                    >Как обменять или вернуть товар надлежащего качества?</span
+
+              <!-- Вопрос 2 -->
+              <div class="faq-item">
+                <button
+                  class="faq-question"
+                  type="button"
+                  aria-expanded="false"
+                >
+                  <span class="faq-question-text"
+                    >Что входит в стоимость разработки?</span
                   >
-                  <span class="accordion__btn-icon"></span>
+                  <span class="faq-icon"></span>
                 </button>
-                <div class="accordion__content">
-                  <div class="accordion__inner">
-                    <div class="accordion__text">
-                      <p>
-                        Вы можете отказаться от покупки. Товар должен быть
-                        надлежащего качества. Убедитесь, что сохранён товарный
-                        вид, потребительские свойства, а также имеется документ,
-                        подтверждающий покупку товара, на товаре отсутствуют
-                        следы сборки, ухудшающие его товарный вид.
-                      </p>
-                      <p>
-                        Обращаем Ваше внимание, что расходы на доставку товара в
-                        случае возврата или обмена товара надлежащего качества
-                        несет Покупатель.
-                      </p>
-                    </div>
+                <div class="faq-answer" aria-hidden="true">
+                  <div class="faq-answer-content">
+                    <p>В базовую стоимость входит:</p>
+                    <ul>
+                      <li>Проектирование и дизайн интерфейса</li>
+                      <li>Адаптивная верстка под все устройства</li>
+                      <li>Программирование функционала</li>
+                      <li>
+                        Наполнение контентом (тексты и изображения
+                        предоставляются клиентом)
+                      </li>
+                      <li>Тестирование на различных устройствах и браузерах</li>
+                      <li>Обучение работе с административной панелью</li>
+                      <li>Техническая поддержка 1 месяц после запуска</li>
+                    </ul>
                   </div>
                 </div>
               </div>
-              <div class="accordion__element">
-                <button class="accordion__btn" type="button">
-                  <span class="accordion__btn-text"
-                    >Как я могу отследить свой заказ?</span
+
+              <!-- Вопрос 3 -->
+              <div class="faq-item">
+                <button
+                  class="faq-question"
+                  type="button"
+                  aria-expanded="false"
+                >
+                  <span class="faq-question-text"
+                    >Вы делаете SEO-оптимизацию?</span
                   >
-                  <span class="accordion__btn-icon"></span>
+                  <span class="faq-icon"></span>
                 </button>
-                <div class="accordion__content">
-                  <div class="accordion__inner">
-                    <div class="accordion__text">
-                      <p>
-                        Вы можете отказаться от покупки. Товар должен быть
-                        надлежащего качества. Убедитесь, что сохранён товарный
-                        вид, потребительские свойства, а также имеется документ,
-                        подтверждающий покупку товара, на товаре отсутствуют
-                        следы сборки, ухудшающие его товарный вид.
-                      </p>
-                      <p>
-                        Обращаем Ваше внимание, что расходы на доставку товара в
-                        случае возврата или обмена товара надлежащего качества
-                        несет Покупатель.
-                      </p>
-                    </div>
+                <div class="faq-answer" aria-hidden="true">
+                  <div class="faq-answer-content">
+                    <p>
+                      Да, мы реализуем базовую SEO-оптимизацию в рамках
+                      разработки:
+                    </p>
+                    <ul>
+                      <li>Семантическая верстка (HTML5)</li>
+                      <li>Оптимизация скорости загрузки</li>
+                      <li>Адаптивность под мобильные устройства</li>
+                      <li>Настройка мета-тегов (title, description)</li>
+                      <li>Создание XML карты сайта</li>
+                      <li>Настройка robots.txt и .htaccess</li>
+                    </ul>
+                    <p>
+                      Для комплексного продвижения в поисковых системах мы
+                      предлагаем отдельную услугу SEO-оптимизации.
+                    </p>
                   </div>
                 </div>
               </div>
-              <div class="accordion__element">
-                <button class="accordion__btn" type="button">
-                  <span class="accordion__btn-text"
-                    >Есть ли доставка в регионы?</span
+
+              <!-- Вопрос 4 -->
+              <div class="faq-item">
+                <button
+                  class="faq-question"
+                  type="button"
+                  aria-expanded="false"
+                >
+                  <span class="faq-question-text"
+                    >Можно ли вносить изменения в процессе работы?</span
                   >
-                  <span class="accordion__btn-icon"></span>
+                  <span class="faq-icon"></span>
                 </button>
-                <div class="accordion__content">
-                  <div class="accordion__inner">
-                    <div class="accordion__text">
-                      <p>
-                        Вы можете отказаться от покупки. Товар должен быть
-                        надлежащего качества. Убедитесь, что сохранён товарный
-                        вид, потребительские свойства, а также имеется документ,
-                        подтверждающий покупку товара, на товаре отсутствуют
-                        следы сборки, ухудшающие его товарный вид.
-                      </p>
-                      <p>
-                        Обращаем Ваше внимание, что расходы на доставку товара в
-                        случае возврата или обмена товара надлежащего качества
-                        несет Покупатель.
-                      </p>
-                    </div>
+                <div class="faq-answer" aria-hidden="true">
+                  <div class="faq-answer-content">
+                    <p>
+                      Да, мы работаем по гибкой методологии и предусматриваем
+                      итерации:
+                    </p>
+                    <ul>
+                      <li>Изменения на этапе проектирования — бесплатно</li>
+                      <li>
+                        Незначительные правки в макетах — обсуждаются
+                        индивидуально
+                      </li>
+                      <li>
+                        Добавление нового функционала — оценивается отдельно
+                      </li>
+                    </ul>
+                    <p>
+                      Мы всегда открыты к обсуждению изменений и находим
+                      оптимальные решения для реализации ваших идей.
+                    </p>
                   </div>
                 </div>
               </div>
-              <div class="accordion__element">
-                <button class="accordion__btn" type="button">
-                  <span class="accordion__btn-text"
-                    >Возможно ли получить корпоративную скидку?</span
+
+              <!-- Вопрос 5 -->
+              <div class="faq-item">
+                <button
+                  class="faq-question"
+                  type="button"
+                  aria-expanded="false"
+                >
+                  <span class="faq-question-text"
+                    >Предоставляете ли вы хостинг и домен?</span
                   >
-                  <span class="accordion__btn-icon"></span>
+                  <span class="faq-icon"></span>
                 </button>
-                <div class="accordion__content">
-                  <div class="accordion__inner">
-                    <div class="accordion__text">
-                      <p>
-                        Вы можете отказаться от покупки. Товар должен быть
-                        надлежащего качества. Убедитесь, что сохранён товарный
-                        вид, потребительские свойства, а также имеется документ,
-                        подтверждающий покупку товара, на товаре отсутствуют
-                        следы сборки, ухудшающие его товарный вид.
-                      </p>
-                      <p>
-                        Обращаем Ваше внимание, что расходы на доставку товара в
-                        случае возврата или обмена товара надлежащего качества
-                        несет Покупатель.
-                      </p>
-                    </div>
+                <div class="faq-answer" aria-hidden="true">
+                  <div class="faq-answer-content">
+                    <p>Мы можем помочь с выбором и настройкой:</p>
+                    <ul>
+                      <li>
+                        Помогаем подобрать и зарегистрировать доменное имя
+                      </li>
+                      <li>Рекомендуем надежные хостинг-провайдеры</li>
+                      <li>
+                        Бесплатно размещаем сайт на нашем тестовом сервере на
+                        период разработки
+                      </li>
+                      <li>
+                        Помогаем с переносом сайта на ваш хостинг после
+                        завершения работ
+                      </li>
+                    </ul>
+                    <p>
+                      Также мы предлагаем услуги по аренде хостинга и домена с
+                      нашей технической поддержкой.
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Вопрос 6 -->
+              <div class="faq-item">
+                <button
+                  class="faq-question"
+                  type="button"
+                  aria-expanded="false"
+                >
+                  <span class="faq-question-text"
+                    >Какие гарантии вы предоставляете?</span
+                  >
+                  <span class="faq-icon"></span>
+                </button>
+                <div class="faq-answer" aria-hidden="true">
+                  <div class="faq-answer-content">
+                    <p>Мы предоставляем комплексные гарантии:</p>
+                    <ul>
+                      <li>Гарантия на код — 12 месяцев</li>
+                      <li>
+                        Бесплатная техническая поддержка — 1 месяц после сдачи
+                        проекта
+                      </li>
+                      <li>
+                        Исправление ошибок, обнаруженных в течение гарантийного
+                        периода — бесплатно
+                      </li>
+                      <li>Обучение работе с сайтом — включено в стоимость</li>
+                      <li>
+                        Консультации по развитию проекта — бесплатно в течение 3
+                        месяцев
+                      </li>
+                    </ul>
+                    <p>
+                      Все гарантии прописываются в договоре на оказание услуг.
+                    </p>
                   </div>
                 </div>
               </div>
