--- a/index.html
+++ b/index.html
@@ -26,23 +26,6 @@
 
   <body>
     <main>
-      <!-- Breadcrumbs -->
-      <!-- <div class="breadcrumbs">
-        <div class="container">
-          <ul class="breadcrumbs__list">
-            <li class="breadcrumbs__item">
-              <a class="breadcrumbs__link" href="#">Главная</a>
-            </li>
-            <li class="breadcrumbs__item">
-              <a class="breadcrumbs__link" href="#">Каталог</a>
-            </li>
-            <li class="breadcrumbs__item">
-              <a class="breadcrumbs__link" href="#">Светильники</a>
-            </li>
-          </ul>
-        </div>
-      </div> -->
-
       <!-- Основная услуга (Digital-партнёрство) -->
       <section class="description">
         <div class="description__wrapper">
@@ -147,9 +130,9 @@
             class="description__video"
             style="
               flex: 1;
-              min-width: 0; /* Важно для правильного сжатия */
-              aspect-ratio: 5/7; /* Соотношение 5:7 */
-              max-width: 500px;
+              min-width: 0;
+              /* aspect-ratio: 5/7;  */
+              max-width: 700px;
               overflow: hidden;
               box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
             "
@@ -166,7 +149,7 @@
                 display: block;
               "
             >
-              <source src="video/process.mp4" type="video/mp4" />
+              <source src="video/zemlya.mp4" type="video/mp4" />
             </video>
           </div>
         </div>
