--- a/index.html
+++ b/index.html
@@ -278,7 +278,6 @@
                         muted
                         loop
                         playsinline
-                        poster="images/video-poster.jpg"
                         style="
                           width: 100%;
                           height: 100%;
@@ -286,10 +285,10 @@
                           display: block;
                         "
                       >
-                        <source src="video/pizza.mp4" type="video/mp4" />
+                        <source src="video/eit.mp4" type="video/mp4" />
                         <p>
                           Ваш браузер не поддерживает видео.
-                          <a href="/video/pizza.mp4">Скачайте видео</a>
+                          <a href="/video/eit.mp4">Скачайте видео</a>
                         </p>
                       </video>
                     </div>
@@ -432,89 +431,6 @@
             <h2 class="day-products__title">Товары дня</h2>
           </div> -->
 
-      <!-- Слайдер -->
-      <!-- <div class="day-products__slider swiper">
-            <ul class="day-products__list swiper-wrapper">
-              <li class="day-products__item">
-                <div class="product-card product-card--small">
-                  <div class="">
-                    <img
-                      class="product-card__img"
-                      src="images/item-7.png"
-                      height="344"
-                      width="290"
-                      alt="Изображение товара"
-                    />
-                    <div class="product-card__more">
-                      <a href="#" class="product-card__link btn btn--icon">
-                        <span class="btn__text">В корзину</span>
-                      </a>
-                      <a href="#" class="product-card__link btn btn--secondary">
-                        <span class="btn__text">Подробнее</span>
-                      </a>
-                    </div>
-                  </div>
-                  <div class="product-card__info">
-                    <h2 class="product-card__title">
-                      Потолочная люстра Ornella A4059PL-4AB (Artelamp)
-                    </h2>
-                    <span class="product-card__old">
-                      <span class="product-card__old-number">15 300</span>
-                      <span class="product-card__old-add">₽</span>
-                    </span>
-                    <span class="product-card__price">
-                      <span class="product-card__price-number">11 540</span>
-                      <span class="product-card__price-add">₽</span>
-                    </span>
-                    <div class="product-card__tooltip tooltip">
-                      <button
-                        class="tooltip__btn"
-                        aria-label="Показать подсказку"
-                      >
-                        <svg
-                          class="tooltip__icon"
-                          width="5"
-                          height="10"
-                          aria-hidden="true"
-                        >
-                          <use xlink:href="images/sprite.svg#icon-i"></use>
-                        </svg>
-                      </button>
-                      <div class="tooltip__content">
-                        <span class="tooltip__text"
-                          >Наличие товара по городам:</span
-                        >
-                        <ul class="tooltip__list">
-                          <li class="tooltip__item">
-                            <span class="tooltip__text"
-                              >Москва:
-                              <span class="tooltip__count">454</span></span
-                            >
-                          </li>
-                          <li class="tooltip__item">
-                            <span class="tooltip__text"
-                              >Оренбург:
-                              <span class="tooltip__count">381</span></span
-                            >
-                          </li>
-                          <li class="tooltip__item">
-                            <span class="tooltip__text"
-                              >Санкт-Петербург:
-                              <span class="tooltip__count">15</span></span
-                            >
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </section> -->
-
-      <!-- Описание компании -->
       <section class="description description-about">
         <div class="container">
           <h2 class="visually-hidden">О нашей компании</h2>
