--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <!-- Текст слева -->
 
             <div class="description__texts" style="flex: 1; min-width: 300px">
-              <h2 style="font-size: 32px; margin-bottom: 20px; color: #fbe9b4">
+              <h2 style="font-size: 32px; margin-bottom: 20px; color: #1a365d">
                 Digital-партнёрство
               </h2>
               <p style="font-size: 18px; color: #666; margin-bottom: 15px">
@@ -54,7 +54,7 @@
                   list-style: none;
                   padding-left: 0;
                   margin-bottom: 25px;
-                  color: #fbe9b4;
+                  color: #1a365d;
                 "
               >
                 <li
@@ -134,7 +134,7 @@
               /* aspect-ratio: 5/7;  */
               max-width: 700px;
               overflow: hidden;
-              box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+              /* box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1); */
             "
           >
             <video
