--- a/index.html
+++ b/index.html
@@ -30,14 +30,20 @@
       <section class="description">
         <div class="description__wrapper">
           <a href="#" class="description__logo-link">
-            <svg
+            <!-- <svg
               class="description__logo"
               width="140"
               height="26"
               aria-hidden="true"
             >
               <use xlink:href="images/sprite.svg#icon-logo"></use>
-            </svg>
+            </svg> -->
+            <img
+              src="images/logo3.png"
+              alt="terraCode"
+              width="160"
+              height="46"
+            />
           </a>
           <div class="description_conteiner">
             <!-- Текст слева -->
@@ -681,9 +687,10 @@
     <footer class="footer">
       <div class="container">
         <a href="#" class="footer__logo-link">
-          <svg class="footer__logo" width="160" height="46" aria-hidden="true">
+          <!-- <svg class="footer__logo" width="160" height="46" aria-hidden="true">
             <use xlink:href="images/sprite.svg#icon-logo"></use>
-          </svg>
+          </svg> -->
+          <img src="images/logo3.png" alt="terraCode" width="160" height="46" />
         </a>
         <!-- <div class="footer__main">
           <div class="footer__menu">
@@ -768,7 +775,7 @@
               >Политика конфиденциальности</a
             >
           </div>
-          <span class="footer__copyright">© ООО "Бриатон"</span>
+          <span class="footer__copyright">© ООО "terraCode"</span>
         </div>
       </div>
     </footer>
